# heritage_crawler

./: .gitignore  RUN.md  debug_download.py  debug_download2.py  get_cookies.py  main.py  pyproject.toml
crawler/: config.py  detail_scraper.py  downloader.py  list_scraper.py  orchestrator.py
